Fix header style and styles on mobile phones

--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -15,6 +15,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+  .gradient-bg {
+    overflow-x: hidden;
+  }
+
   .g4 {
     right: calc(10% - var(--circle-size) / 2);
   }
